--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -19,6 +19,7 @@
   }
 
   &:disabled {
+    pointer-events: none;
     cursor: default;
     opacity: 0.7;
   }
